--- a/src/components/fiches-techniques/creer/phase2/PhasesChoice.module.css
+++ b/src/components/fiches-techniques/creer/phase2/PhasesChoice.module.css
@@ -35,6 +35,11 @@
     border-radius: 5px;
 }
 
+.gridContainer3 {
+    display: grid;
+    grid: repeat(1, auto) / auto-flow auto;
+}
+
 .label {
     position: relative;
     display: block;
@@ -47,15 +52,30 @@
     content: ' :';
 }
 
-.input[type="text"], .input[type="number"] {
+.input[type="text"] {
     position: relative;
     color: black;
     border-radius: 15px;
-    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: left;
     margin-top: 5px;
     height: 40px;
-    width: 100%;
+    width: 230px;
     box-sizing: border-box;
+}
+
+.button {
+    position: relative;
+    margin-left: 20px;
+    color: aliceblue;
+    margin-top: 5px;
+    width: 40px;
+    height: 40px;
+    box-sizing: border-box;
+    font-weight: 600;
+    background-color: rgba(70, 73, 255, 0.87);
+    border-radius: 30px;
 }
 
 .list {
@@ -69,10 +89,11 @@
 
 .add {
     font-size: 12px;
-    padding-left: 3px;
-    padding-right: 3px;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-bottom: 3px;
     background-color: green;
-    vertical-align:text-top;
+    vertical-align:top;
     border-radius: 10px;
     color: aliceblue;
 }
@@ -82,6 +103,7 @@
     display: flex;
     flex-direction: row;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .link {
