--- a/src/components/stocks/etiquette/quantity-meal/QuantiteParFiche.module.css
+++ b/src/components/stocks/etiquette/quantity-meal/QuantiteParFiche.module.css
@@ -89,8 +89,15 @@
 }
 
 .click {
+    position: relative;
+    display: flex;
+    flex-direction: row;
     cursor: pointer;
     margin-bottom: 10px;
+}
+
+.link {
+    text-decoration: none;
 }
 
 .add {
