[Stock] modification des stocks pour une liste d'ingrédients choisis

--- a/src/components/stocks/etiquette/vente-etiquettes/vente-normale/VenteNormale.module.css
+++ b/src/components/stocks/etiquette/vente-etiquettes/vente-normale/VenteNormale.module.css
@@ -11,10 +11,15 @@
 }
 
 .label2 {
-    font-size: 15px;
+    font-size: 17px;
     font-weight: bold;
 }
 
 .label {
     font-weight: bold;
+}
+
+li {
+    list-style-position: inside;
+    font-size: 13px;
 }
