[Etiquette] détail nombre de couverts / détail quantité d'ingredient ok ou non [Fiche technique] recherche ajout d'un espace '"word" |' [Coûts] calcul de cout avec fonction pour simplifier dans l'affichage et modifier rapidement si calculs faux

--- a/src/components/stocks/etiquette/vente-etiquettes/VenteEtiquettes.module.css
+++ b/src/components/stocks/etiquette/vente-etiquettes/VenteEtiquettes.module.css
@@ -85,6 +85,10 @@
     background-color: rgb(42, 99, 165);
 }
 
+.buttonPrint:disabled {
+    background-color: rgba(108, 104, 126, 0.644);  
+}
+
 /* Toggle Switch Button */
 
 .switchContainer {
