--- a/src/components/stocks/etiquette/vente-etiquettes/vente-a-emporter/VenteAEmporter.module.css
+++ b/src/components/stocks/etiquette/vente-etiquettes/vente-a-emporter/VenteAEmporter.module.css
@@ -15,8 +15,17 @@
     font-weight: bold;
 }
 
+.label3 {
+    font-weight: bold;
+    color: red;
+}
+
 .label {
     font-weight: bold;
+}
+
+.label4 {
+    color: red;
 }
 
 li {
