--- a/src/components/fiches-techniques/modifier/phase3/ModifyTaskScheduling.module.css
+++ b/src/components/fiches-techniques/modifier/phase3/ModifyTaskScheduling.module.css
@@ -7,7 +7,7 @@
     justify-content: left;
     text-align: left;
     padding: 0px 20px 20px 20px;
-    width: 650px;
+    width: 600px;
     margin:auto;
     margin-top: 40px;
     margin-bottom: 60px;
@@ -15,29 +15,24 @@
 
 .gridContainer {
     display: grid;
-    grid: repeat(1, 70px) / auto-flow 310px;
+    grid: repeat(1, 70px) / auto-flow 290px;
 }
 
 .gridContainer > div {
-    width: 290px;
+    width: 270px;
     height: 50px;
 }
 
 .gridContainer2 {
     display: grid;
-    grid: repeat(1, 340px) / auto-flow 310px;
+    grid: repeat(1, 320px) / auto-flow 290px;
 }
 
 .gridContainer2 > div {
-    width: 290px;
+    width: 270px;
     height: 300px;
     border: 1px solid black;
     border-radius: 5px;
-}
-
-.gridContainer3 {
-    display: grid;
-    grid: repeat(1, auto) / auto-flow auto;
 }
 
 .label {
@@ -52,62 +47,34 @@
     content: ' :';
 }
 
-.input[type="text"] {
+.input[type="text"], .input[type="number"] {
     position: relative;
     color: black;
     border-radius: 15px;
-    padding-left: 10px;
-    padding-right: 10px;
-    text-align: left;
+    text-align: center;
     margin-top: 5px;
     height: 40px;
-    width: 230px;
+    width: 100%;
     box-sizing: border-box;
-}
-
-.button {
-    position: relative;
-    margin-left: 20px;
-    color: aliceblue;
-    margin-top: 5px;
-    width: 40px;
-    height: 40px;
-    box-sizing: border-box;
-    font-weight: 600;
-    background-color: rgba(70, 73, 255, 0.87);
-    border-radius: 30px;
 }
 
 .list {
     position: relative;
-    padding: 8px;
-    font-size: 15px;
+    padding: 15px;
+    font-size: 14px;
     box-sizing: border-box;
     overflow-y: auto;
     overflow-x: none;
+    outline-offset: 15px;
 }
 
 .add {
-    font-size: 12px;
-    padding-left: 4px;
-    padding-right: 4px;
-    padding-bottom: 3px;
-    background-color: green;
-    vertical-align:top;
-    border-radius: 10px;
-    color: aliceblue;
+    font-size: 14px;
+    color: green;
 }
 
 .click {
-    position: relative;
-    display: flex;
-    flex-direction: row;
     cursor: pointer;
-    margin-bottom: 10px;
-}
-
-.link {
-    text-decoration: none;
 }
 
 .buttonNext {
