--- a/src/features/fichestechniques/modify/ModifyFicheTechnique.module.css
+++ b/src/features/fichestechniques/modify/ModifyFicheTechnique.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     width: 100%;
     margin: auto;
 }
