[Fiche technique] impression pdf fix one bug

--- a/src/components/mercurial/ingredient/IngredientDetail.module.css
+++ b/src/components/mercurial/ingredient/IngredientDetail.module.css
@@ -156,7 +156,7 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 
-@media print {
+/* @media print {
     .detailContainer {
         width: 95%;
     }
@@ -171,4 +171,4 @@ input:checked + .slider:before {
         size: landscape;
         margin: auto;
     }
-}
+} */
