--- a/src/features/mercurial/view/DetailIngredient2.module.css
+++ b/src/features/mercurial/view/DetailIngredient2.module.css
@@ -204,14 +204,8 @@ input:checked + .slider:before {
 }
 
 @media print {
-    .detailContainer {
+    .detail {
         width: 95%;
-    }
-
-    .page-break {
-      margin-top: 1rem;
-      display: block;
-      page-break-before: auto;
     }
 
     @page {
